src/objects/Workflow_Validation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Migration_Workflow_Validation_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>De-activates workflow and validation that will affect data migration</description>
        <inlineHelpText>De-activates workflow and validation that will affect data migration</inlineHelpText>
        <label>Migration Workflow / Validation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflows_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflows Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Workflow and Validation Control</label>
</CustomObject>